# Robotics2_ARI3215

./: README.md  dependencies.txt  explorer.py  frames_2026-01-18_23.03.10.gv  mouse.urdf.xacro  mouse2.urdf.xacro
pac_mouse_pkg/: package.xml  setup.cfg  setup.py
pac_mouse_pkg/config/: bridge_params.yaml  ekf.yaml  nav2_params.yaml  nav2_params_cat.yaml  slam_params.yaml
pac_mouse_pkg/launch/: final_simulation.launch.py  maze.launch.py  simulation.launch.py
pac_mouse_pkg/models/cheese_triangle/: model.config  model.sdf
pac_mouse_pkg/models/cheese_triangle/meshes/: cheese_triangle.mtl  cheesetriangle.mtl
pac_mouse_pkg/pac_mouse_pkg/: cat_brain.py  cheese_manager.py  explorer.py  explorer_mouse.py  game_master.py  game_mater.py  hybrid_explorer_mouse.py  mouse_brain.py  mouse_navigator.py  smart_cat.py  smart_mouse.py  smart_mouse_final.py  teleop.py
pac_mouse_pkg/rviz/: mouse_view.rviz  pac_mouse_dual.rviz
pac_mouse_pkg/urdf/: cat.urdf.xacro  doraemon.urdf.xacro  mouse.urdf.xacro
pac_mouse_pkg/worlds/: maze.sdf  maze_v3.sdf  maze_v3_scaled_1.5.sdf  maze_v3_scaled_2.0.sdf  pac_mouse_maze.sdf  scale_maze.py
